--- a/ProjectBuilder/app/src/main/AndroidManifest.xml
+++ b/ProjectBuilder/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
             android:label="@string/title_activity_project_list"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+        <activity android:name=".Activity.AddProject" >
+        </activity>
     </application>
 
 </manifest>
