--- a/ProjectBuilder/app/src/main/AndroidManifest.xml
+++ b/ProjectBuilder/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +33,11 @@
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity android:name=".Activity.AddProject" >
+        </activity>
+        <activity
+            android:name=".Activity.Main"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
