--- a/ProjectBuilder/app/build.gradle
+++ b/ProjectBuilder/app/build.gradle
@@ -34,13 +34,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/json-simple-1.1.1.jar')
     compile files('libs/android-async-http-1.4.5.jar')
     compile files('libs/httpclient-4.5.1.jar')
     compile files('libs/httpcore-4.4.3.jar')
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile files('libs/ActionBar-PullToRefresh.jar')
+    compile files('libs/android-pull-to-refresh-master.jar')
+    compile 'com.android.support:cardview-v7:23.1.0'
 }
 
 
