--- a/ProjectBuilder/app/src/main/AndroidManifest.xml
+++ b/ProjectBuilder/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Activity.Login"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,17 +27,19 @@
             android:name=".Activity.SignUp"
             android:label="@string/title_activity_sign_up" >
         </activity>
+        <activity android:name=".Activity.AddProject" >
+        </activity>
         <activity
             android:name=".Activity.ProjectList"
             android:label="@string/title_activity_project_list"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
-        <activity android:name=".Activity.AddProject" >
-        </activity>
         <activity
-            android:name=".Activity.Main"
-            android:label="@string/title_activity_main"
+            android:name=".Activity.ProjectMain"
+            android:label="@string/title_activity_project_main"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity android:name=".Activity.AddTask" >
         </activity>
     </application>
 
