--- a/ProjectBuilder/app/build.gradle
+++ b/ProjectBuilder/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile files('libs/ActionBar-PullToRefresh.jar')
     compile files('libs/android-pull-to-refresh-master.jar')
     compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.github.wangjiegulu:RapidFloatingActionButton:1.0.3'
 }
 
 
