--- a/ProjectBuilder/app/build.gradle
+++ b/ProjectBuilder/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.github.wangjiegulu:RapidFloatingActionButton:1.0.3'
     compile 'org.json:json:20151123'
+    compile files('libs/gcm.jar')
 }
 
 
